@@ -346,9 +346,9 @@ int32_t SPVM__Net__SSLeay__X509__get_ext(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   X509* self = env->get_pointer(env, stack, obj_self);
   
-  X509_EXTENSION* x509_ext = X509_get_ext(self, loc);
+  X509_EXTENSION* x509_ext_tmp = X509_get_ext(self, loc);
   
-  if (!x509_ext) {
+  if (!x509_ext_tmp) {
     int64_t ssl_error = ERR_peek_last_error();
     
     char* ssl_error_string = env->get_stack_tmp_buffer(env, stack);
@@ -363,16 +363,14 @@ int32_t SPVM__Net__SSLeay__X509__get_ext(SPVM_ENV* env, SPVM_VALUE* stack) {
     return error_id;
   }
   
+  X509_EXTENSION* x509_ext = X509_EXTENSION_dup(x509_ext_tmp);
+  
   void* obj_address_x509_ext = env->new_pointer_object_by_name(env, stack, "Address", x509_ext, &error_id, __func__, FILE_NAME, __LINE__);
   if (error_id) { return error_id; }
   stack[0].oval = obj_address_x509_ext;
   env->call_class_method_by_name(env, stack, "Net::SSLeay::X509_EXTENSION", "new_with_pointer", 1, &error_id, __func__, FILE_NAME, __LINE__);
   if (error_id) { return error_id; }
   void* obj_x509_ext = stack[0].oval;
-  env->set_no_free(env, stack, obj_x509_ext, 1);
-  
-  env->set_field_object_by_name(env, stack, obj_x509_ext, "ref_x509", obj_self, &error_id, __func__, FILE_NAME, __LINE__); 
-  if (error_id) { return error_id; }
   
   stack[0].oval = obj_x509_ext;
   
